--- a/code/controlvalueaccessor/src/styles.scss
+++ b/code/controlvalueaccessor/src/styles.scss
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+
+html {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+button {
+  padding: 0.5rem 1rem;
+  border: 1px solid #ddd;
+  background-color: #eee;
+  transition: background-color 0.2s ease-in-out;
+
+  &:hover {
+    background-color: #ddd;
+  }
+}
+
+.box {
+  margin: 0.5rem 0.5rem;
+}
+
+.section {
+  margin: 1rem 0;
+}
