--- a/code/controlvalueaccessor/src/styles.scss
+++ b/code/controlvalueaccessor/src/styles.scss
@@ -22,3 +22,20 @@ button {
 .section {
   margin: 1rem 0;
 }
+
+input,
+textarea {
+  padding: 0.5rem 1rem;
+  border: 1px solid #ddd;
+  background-color: #fff;
+}
+
+input:placeholder-shown,
+textarea:placeholder-shown {
+  background-color: #eee;
+}
+
+input:focus,
+textarea:focus {
+  background-color: #fff;
+}
