Add first component using input templates

--- a/code/project/src/app/app.component.html
+++ b/code/project/src/app/app.component.html
@@ -1,4 +1,3 @@
 <h1>Advanced templates</h1>
 
-<app-test-use-template></app-test-use-template>
-<app-test-table></app-test-table>
+<app-test-use-templ></app-test-use-templ>
