--- a/code/project/src/app/app.component.html
+++ b/code/project/src/app/app.component.html
@@ -1,3 +1,2 @@
-<h1>Advanced templates</h1>
-
-<app-test-use-templ></app-test-use-templ>
+<!-- <app-test-use-templ></app-test-use-templ> -->
+<app-test-collapsable-header></app-test-collapsable-header>
