Refactor tests and components

--- a/code/project/src/app/app.component.html
+++ b/code/project/src/app/app.component.html
@@ -1,2 +1,3 @@
-<!-- <app-test-use-templ></app-test-use-templ> -->
-<app-test-collapsable-header></app-test-collapsable-header>
+<!-- <test-use-templ></test-use-templ> -->
+<!-- <test-collapsable-header></test-collapsable-header> -->
+<test-collapse-on-scroll></test-collapse-on-scroll>
