--- a/code/project/src/app/app.component.html
+++ b/code/project/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!-- <test-use-templ></test-use-templ> -->
 <!-- <test-collapsable-header></test-collapsable-header> -->
-<test-collapse-on-scroll></test-collapse-on-scroll>
+<test-squash-on-scroll></test-squash-on-scroll>
