--- a/ngrx/code/ngrx-ng-uni/src/app/courses/edit-course-dialog/edit-course-dialog.component.html
+++ b/ngrx/code/ngrx-ng-uni/src/app/courses/edit-course-dialog/edit-course-dialog.component.html
@@ -1,79 +1,69 @@
-
 <h2 mat-dialog-title>{{dialogTitle}}</h2>
 
 <mat-dialog-content>
-
   <ng-container *ngIf="form">
 
     <div class="spinner-container" *ngIf="loading$ | async">
-
       <mat-spinner></mat-spinner>
-
     </div>
 
     <ng-container [formGroup]="form">
 
+      <!-- Description -->
       <mat-form-field>
-
-        <input matInput
-               placeholder="Course Description"
-               formControlName="description">
-
+        <input
+          matInput
+          placeholder="Course Description"
+          formControlName="description"
+        >
       </mat-form-field>
 
-      <ng-container *ngIf="mode == 'create'">
+      <ng-container *ngIf="mode === 'create'">
 
+        <!-- Course URL -->
         <mat-form-field>
-
-          <input matInput
-                 placeholder="Course Url"
-                 formControlName="url">
-
+          <input
+            matInput
+            placeholder="Course Url"
+            formControlName="url"
+          >
         </mat-form-field>
 
+        <!-- Icon URL -->
         <mat-form-field>
-
-          <input matInput
-                 placeholder="Course Icon Url"
-                 formControlName="iconUrl">
-
+          <input
+            matInput
+            placeholder="Course Icon Url"
+            formControlName="iconUrl"
+          >
         </mat-form-field>
 
       </ng-container>
 
+      <!-- Category -->
       <mat-form-field>
-
-        <mat-select placeholder="Select category"
-                    formControlName="category">
-
-          <mat-option value="BEGINNER">
-            Beginner</mat-option>
-          <mat-option value="INTERMEDIATE">
-            Intermediate</mat-option>
-          <mat-option value="ADVANCED">
-            Advanced</mat-option>
-
+        <mat-select placeholder="Select category" formControlName="category">
+          <mat-option value="BEGINNER">Beginner</mat-option>
+          <mat-option value="INTERMEDIATE">Intermediate</mat-option>
+          <mat-option value="ADVANCED">Advanced</mat-option>
         </mat-select>
-
       </mat-form-field>
 
+      <!-- Promo flag -->
       <mat-slide-toggle formControlName="promo">Promotion On</mat-slide-toggle>
 
-
+      <!-- Long description -->
       <mat-form-field>
-
-        <textarea matInput placeholder="Description"
-                  formControlName="longDescription">
-
-        </textarea>
-
+        <textarea
+          matInput
+          placeholder="Description"
+          formControlName="longDescription"
+        ></textarea>
       </mat-form-field>
 
     </ng-container>
 
-
   </ng-container>
-
 </mat-dialog-content>
 
 <mat-dialog-actions>
@@ -82,14 +72,11 @@
     Close
   </button>
 
-  <button mat-raised-button color="primary"
-          [disabled]="!form?.valid || (this.loading$ | async)"
-          (click)="onSave()">
-    Save
-  </button>
+  <button
+    mat-raised-button
+    color="primary"
+    [disabled]="!form?.valid || (this.loading$ | async)"
+    (click)="onSave()"
+  >Save</button>
 
 </mat-dialog-actions>
-
-
-
-
