Fix styling of modal dialogs

--- a/ngrx/code/ngrx-ng-uni/src/app/courses/home/home.component.html
+++ b/ngrx/code/ngrx-ng-uni/src/app/courses/home/home.component.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="counters">
-    <p>In Promo: {{promoTotal$ | async}}</p>
+    In Promo: {{ promoTotal$ | async }}
   </div>
 
   <div class="spinner-container" *ngIf="!(loading$ | async )">
