--- a/ngrx/code/ngrx-ng-uni/src/app/courses/edit-course-dialog/edit-course-dialog.component.html
+++ b/ngrx/code/ngrx-ng-uni/src/app/courses/edit-course-dialog/edit-course-dialog.component.html
@@ -50,7 +50,9 @@
       </mat-form-field>
 
       <!-- Promo flag -->
-      <mat-slide-toggle formControlName="promo">Promotion On</mat-slide-toggle>
+      <div class="mat-form-field">
+        <mat-slide-toggle formControlName="promo">Promotion On</mat-slide-toggle>
+      </div>
 
       <!-- Long description -->
       <mat-form-field>
