--- a/ngrx/code/ngrx-ng-uni/src/app/courses/edit-course-dialog/edit-course-dialog.component.html
+++ b/ngrx/code/ngrx-ng-uni/src/app/courses/edit-course-dialog/edit-course-dialog.component.html
@@ -3,7 +3,7 @@
 <mat-dialog-content>
   <ng-container *ngIf="form">
 
-    <div class="spinner-container" *ngIf="loading$ | async">
+    <div class="spinner-container" *ngIf="loading">
       <mat-spinner></mat-spinner>
     </div>
 
