--- a/ngrx/code/ngrx-ng-uni/src/app/courses/edit-course-dialog/edit-course-dialog.component.html
+++ b/ngrx/code/ngrx-ng-uni/src/app/courses/edit-course-dialog/edit-course-dialog.component.html
@@ -77,7 +77,7 @@
   <button
     mat-raised-button
     color="primary"
-    [disabled]="!form?.valid || (this.loading$ | async)"
+    [disabled]="!form?.valid || loading"
     (click)="onSave()"
   >Save</button>
 
