Add Booleanish decorator

--- a/angular/project/src/app/app.component.html
+++ b/angular/project/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <test-use-templ></test-use-templ> -->
 <!-- <test-collapsable-header></test-collapsable-header> -->
-<test-squash-on-scroll></test-squash-on-scroll>
+<!-- <test-squash-on-scroll></test-squash-on-scroll> -->
+<test-booleanish flag1 [flag2]="true"></test-booleanish>
