--- a/ngrx/code/posts-app/src/styles.scss
+++ b/ngrx/code/posts-app/src/styles.scss
@@ -1,3 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import './app/style/global';
+@import './app/shared/style/global';
