--- a/ngrx/code/posts-app/src/app/shared/style/sass-pal/store/_units.scss
+++ b/ngrx/code/posts-app/src/app/shared/style/sass-pal/store/_units.scss
@@ -1,4 +1,8 @@
 $_: pal-set-merge('units',(
+  '0,25': 0.25,
+  '0,5': 0.5,
+  '1,5': 1.5,
+  '2,5': 2.5,
   'neg2': -2,
   'neg4': -4,
   'neg8': -8,
