--- a/ngrx/code/posts-app/src/app/shared/ui/components/button/button.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/button/button.component.html
@@ -1,3 +1,12 @@
-<button>
+<button
+  class="button color-{{ color }} size-{{ size }}"
+  [class.is-uppercase]="isUppercase"
+  [class.has-margin]="hasMargin"
+  [class.no-padding]="noPadding"
+  [class.has-icon]="hasIcon"
+  [class.has-full-width]="hasFullWidth"
+  [type]="type"
+  [disabled]="isDisabled"
+>
   <ng-content></ng-content>
 </button>
