--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/button/button.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/button/button.component.html
@@ -1,3 +1,5 @@
 <h1>Demo: button</h1>
 
-<ui-button>Button 1</ui-button>
+<ui-button size="small">Button small</ui-button>
+<ui-button size="medium">Button medium</ui-button>
+<ui-button size="large">Button large</ui-button>
