--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/button/button.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/button/button.component.html
@@ -1,17 +1,19 @@
-<h1>Demo: button</h1>
+<h2>Demo: button</h2>
 
-<h2>Input: color</h2>
+<a routerLink="/demo">&lArr; Demo</a>
+
+<h3>Input: color</h3>
 <ui-button color="primary">Primary</ui-button>
 <ui-button color="primary-outline">Primary outline</ui-button>
 <ui-button color="secondary">Secondary</ui-button>
 <ui-button color="secondary-outline">Secondary outline</ui-button>
 
-<h2>Input: size</h2>
+<h3>Input: size</h3>
 <ui-button size="small">Small</ui-button>
 <ui-button size="medium">Medium</ui-button>
 <ui-button size="large">Large</ui-button>
 
-<h2>Input: Flags</h2>
+<h3>Input: Flags</h3>
 <ui-button isDisabled>Disabled</ui-button>
 <code>[isDisabled]=true</code>
 <br>
