List all demo pages in /demo index page

--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/index/index.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/index/index.component.html
@@ -1,7 +1,7 @@
 <h2>Demo</h2>
 
 <ul>
-  <li *ngFor="let route of routes">
-    <a [routerLink]="'demo/' + route.path">{{ route.data.label }}</a>
+  <li *ngFor="let link of links">
+    <a [routerLink]="link.path">{{ link.label }}</a>
   </li>
 </ul>
