--- a/ngrx/code/posts-app/src/app/shared/ui/components/button/button.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/button/button.component.scss
@@ -146,8 +146,9 @@
 .button[disabled]:focus {
   @include pal((
     color: (
-      background: 'gray-mid-light',
-      text: 'gray',
+      background: 'gray-light',
+      text: 'gray-mid-light',
+      border: 'gray-light',
     ),
   ));
 }
