--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/pagination/pagination.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/pagination/pagination.component.html
@@ -5,6 +5,7 @@
 <ui-pagination
   current="1"
   total="100"
+  size="small"
 ></ui-pagination>
 
 
@@ -16,4 +17,5 @@
 <ui-pagination
   current="10"
   total="10"
+  size="large"
 ></ui-pagination>
