--- a/ngrx/code/posts-app/src/app/shared/ui/components/pagination/pagination.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/pagination/pagination.component.html
@@ -1,11 +1,11 @@
-<div class="pagination">
+<div class="pagination size-{{ size }}">
 
   <!-- Previous -->
   <ui-button
     class="link back"
     color="primary-outline"
-    size="small"
     type="button"
+    [size]="size"
     [isDisabled]="!previous"
     (click)="onClick(previous)"
   >
@@ -16,8 +16,9 @@
   <ui-button
     *ngFor="let page of pages"
     class="link"
-    [color]="page === current ? 'primary' : 'primary-outline'"
     type="button"
+    [color]="page === current ? 'primary' : 'primary-outline'"
+    [size]="size"
     [isDisabled]="!page"
     (click)="onClick(page)"
   >
@@ -28,8 +29,8 @@
   <ui-button
     class="link next"
     color="primary-outline"
-    size="small"
     type="button"
+    [size]="size"
     [isDisabled]="!next"
     (click)="onClick(next)"
   >
