--- a/ngrx/code/posts-app/src/app/shared/ui/components/pagination/pagination.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/pagination/pagination.component.scss
@@ -10,17 +10,24 @@
     height: 100%;
   }
 
+  &.size-small {
+    ::ng-deep button {
+      font-size: 1.25rem;
+      padding: 0.1rem 0.75rem;
+    }
+  }
+
   &.size-medium {
     ::ng-deep button {
       font-size: 1.5rem;
-      height: 3.75rem * 0.66;
+      padding: 0.25rem 1rem;
     }
   }
 
   &.size-large {
     ::ng-deep button {
       font-size: 1.75rem;
-      height: 4.5rem * 0.66;
+      padding: 0.5rem 1.5rem;
     }
   }
 }
