--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/card/card.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/card/card.component.html
@@ -2,4 +2,14 @@
 
 <a routerLink="/demo">&lArr; Demo</a>
 
-<ui-card></ui-card>
+<ui-card>
+  <h2 slot="title">I am a title</h2>
+  <h3 slot="subtitle">This is a subtitle</h3>
+  <div slot="body">
+    Lorem ipsum dolor sit amet...
+  </div>
+  <div slot="footer">
+    <button>Delete</button>
+    <button>Edit</button>
+  </div>
+</ui-card>
