--- a/ngrx/code/posts-app/src/app/shared/style/base/_root.scss
+++ b/ngrx/code/posts-app/src/app/shared/style/base/_root.scss
@@ -1,5 +1,5 @@
 html {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 16px;
   box-sizing: border-box;
 }
