--- a/ngrx/code/posts-app/src/app/shared/ui/components/card/card.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/card/card.component.scss
@@ -1,1 +1,31 @@
 @import 'src/app/style';
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+  margin: 1rem;
+  padding: 2rem;
+  border-radius: 3rem;
+  box-shadow: 3px 3px 7px rgba(0,0,0,0.2);
+}
+
+.header {
+  .title {
+
+  }
+  .subtitle {
+
+  }
+}
+
+.body {
+
+}
+
+.footer:not(:empty) {
+  border-top: 2px solid rgba(0,0,0,0.1);
+  padding-top: 1rem;
+  margin-top: 1rem;
+}
