--- a/ngrx/code/posts-app/src/app/shared/ui/components/alert/alert.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/alert/alert.component.html
@@ -1,2 +1,4 @@
-<p>alert works!</p>
-<button (click)="onDismiss()">Close</button>
+<div class="alert type-{{ type }}">
+  <span class="message">{{ message }}</span>
+  <span class="dismiss" (click)="onDismiss()">&times;</span>
+</div>
