--- a/ngrx/code/posts-app/src/app/app.component.html
+++ b/ngrx/code/posts-app/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div class="container">
   <router-outlet></router-outlet>
+
+  <ng-container *ngIf="ui.alert | async as alert">
+    <ui-alert [message]="alert.message" [type]="alert.type"></ui-alert>
+  </ng-container>
 </div>
