--- a/ngrx/code/posts-app/src/app/shared/ui/components/alert/alert.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/alert/alert.component.scss
@@ -1,1 +1,25 @@
 @import 'src/app/style';
+
+.alert {
+  @include pal((
+    size: maxw-alert,
+    space: py1 px2,
+    flex: (
+      main-axis: space-between,
+      cross-axis: center,
+    ),
+    color: (text: white),
+  ));
+
+  &.success {
+    @include pal((
+      color: (background: green),
+    ));
+  }
+
+  &.error {
+    @include pal((
+      color: (background: red),
+    ));
+  }
+}
