--- a/ngrx/code/posts-app/src/app/shared/ui/components/alert/alert.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/alert/alert.component.html
@@ -1,4 +1,8 @@
-<div class="alert type-{{ type }}">
-  <span class="message">{{ message }}</span>
-  <span class="dismiss" (click)="onDismiss()">&times;</span>
+<div class="alert-container">
+  <div class="container">
+    <div class="alert type-{{ type }}">
+      <span class="message">{{ message }}</span>
+      <span class="dismiss" (click)="onDismiss()">&times;</span>
+    </div>
+  </div>
 </div>
