--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/color/color.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/color/color.component.html
@@ -1,4 +1,4 @@
-<h2>Demo: Color palette</h2>
+<h1>Color palette</h1>
 
 <ui-breadcrumbs
   [links]="[
@@ -7,20 +7,15 @@
   ]"
 ></ui-breadcrumbs>
 
-<h3>Primary</h3>
 <div class="boxes">
-  <div class="box primary-1">primary-1/5</div>
-  <div class="box primary-2">primary-2/5</div>
-  <div class="box primary">primary</div>
-  <div class="box primary-4">primary-4/5</div>
-  <div class="box primary-5">primary-5/5</div>
-</div>
-
-<h3>Secondary</h3>
-<div class="boxes">
-  <div class="box secondary-1">secondary-1/5</div>
-  <div class="box secondary-2">secondary-2/5</div>
-  <div class="box secondary">secondary</div>
-  <div class="box secondary-4">secondary-4/5</div>
-  <div class="box secondary-5">secondary-5/5</div>
+  <ng-container *ngFor="let color of ['primary', 'secondary', 'grey']">
+    <div class="box">
+      <h2>{{ color[0].toUpperCase() + color.substring(1) }}</h2>
+      <div class="stripe {{ color }}-dark">{{ color }}-dark</div>
+      <div class="stripe {{ color }}-mid-dark">{{ color }}-mid-dark</div>
+      <div class="stripe {{ color }}">{{ color }}</div>
+      <div class="stripe {{ color }}-mid-light">{{ color }}-mid-light</div>
+      <div class="stripe {{ color }}-light">{{ color }}-light</div>
+    </div>
+  </ng-container>
 </div>
