--- a/ngrx/code/posts-app/src/app/app.component.html
+++ b/ngrx/code/posts-app/src/app/app.component.html
@@ -1,7 +1,11 @@
 <div class="container">
   <router-outlet></router-outlet>
-
-  <ng-container *ngIf="ui.alert | async as alert">
-    <ui-alert [message]="alert.message" [type]="alert.type"></ui-alert>
-  </ng-container>
 </div>
+
+<ng-container *ngIf="ui.alert | async as alert">
+  <ui-alert
+    [message]="alert.message"
+    [type]="alert.type"
+    (dismissed)="onDismissAlert()"
+  ></ui-alert>
+</ng-container>
