--- a/ngrx/code/posts-app/src/app/shared/ui/components/card/card.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/card/card.component.scss
@@ -12,11 +12,15 @@
 }
 
 .header {
-  .title {
-
+  .title ::ng-deep > * {
+    font-size: 1.5rem;
+    margin: 0;
   }
-  .subtitle {
-
+  .subtitle ::ng-deep > * {
+    font-size: 1rem;
+    margin: 0;
+    margin-top: -0.66rem;
+    margin-bottom: 0.66rem;
   }
 }
 
