--- a/ngrx/code/posts-app/src/app/features/users/containers/users/users.component.html
+++ b/ngrx/code/posts-app/src/app/features/users/containers/users/users.component.html
@@ -15,7 +15,7 @@
         City: {{ user.address.city }}
       </div>
       <div slot="footer">
-        <ui-button (click)="onShowUser(index)">Show</ui-button>
+        <ui-button size="small" (click)="onShowUser(index)">Show</ui-button>
       </div>
 
     </ui-card>
