Style <ui-row> and <ui-col>

--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/grid/grid.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/grid/grid.component.html
@@ -6,7 +6,8 @@
 ]"></ui-breadcrumbs>
 
 <ui-row>
-  <ui-col [size]="2" [size-md]="3" [size-lg]="4">First</ui-col>
-  <ui-col [size]="2" [size-md]="3" [size-lg]="4">Second</ui-col>
-  <ui-col [size]="2" [size-md]="3" [size-lg]="4">Three</ui-col>
+  <ui-col [size]="6" [sizeMd]="4">First</ui-col>
+  <ui-col [size]="6" [sizeMd]="4">Second</ui-col>
+  <ui-col [size]="6" [sizeMd]="4">Three</ui-col>
+  <ui-col [size]="6" [sizeMd]="4">Four</ui-col>
 </ui-row>
