--- a/ngrx/code/posts-app/src/app/features/posts/containers/posts/posts.component.html
+++ b/ngrx/code/posts-app/src/app/features/posts/containers/posts/posts.component.html
@@ -1,1 +1,31 @@
-<p>posts works!</p>
+<h1>Posts</h1>
+
+<ui-breadcrumbs [links]="[
+  { path: '/', label: 'App' },
+  { paht: null, label: 'Posts' }
+]"></ui-breadcrumbs>
+
+<ng-container *ngIf="!(ui.loading | async); else loadingRef">
+  <ui-row withGutters>
+    <ui-col
+      *ngFor="let post of posts; let index = index"
+      size="12"
+      sizeMd="6"
+      sizeLg="4"
+    >
+      <ui-card>
+        <h2 slot="title">{{ post.title[0].toUpperCase() + post.title.slice(1, 20) + '...' }}</h2>
+        <div slot="body">
+          {{ post.body.slice(0, 20) + '...' }}
+        </div>
+        <div slot="footer">
+          <ui-button size="small" (click)="onShowPost(index)">Show</ui-button>
+        </div>
+      </ui-card>
+    </ui-col>
+  </ui-row>
+</ng-container>
+
+<ng-template #loadingRef>
+  Loading...
+</ng-template>
