Add boilerplate for routing

--- a/ngrx-material/fitness-app/src/app/app.component.html
+++ b/ngrx-material/fitness-app/src/app/app.component.html
@@ -1,4 +1,1 @@
-<button mat-raised-button color="accent">
-  <mat-icon aria-hidden="false" aria-label="Mail icon">mail</mat-icon>
-  Contact us
-</button>
+<router-outlet></router-outlet>
