--- a/ngrx-material/fitness-app/src/app/auth/signup/signup.component.html
+++ b/ngrx-material/fitness-app/src/app/auth/signup/signup.component.html
@@ -1,1 +1,15 @@
-<p>signup works!</p>
+<section>
+  <form>
+
+    <!-- Email -->
+    <mat-form-field>
+      <input type="email" matInput placeholder="Your email...">
+    </mat-form-field>
+
+    <!-- Password -->
+    <mat-form-field>
+      <input type="password" matInput placeholder="Your password...">
+    </mat-form-field>
+
+  </form>
+</section>
