--- a/ngrx-material/fitness-app/src/app/auth/signup/signup.component.html
+++ b/ngrx-material/fitness-app/src/app/auth/signup/signup.component.html
@@ -3,7 +3,6 @@
 
     <!-- Email -->
     <mat-form-field>
-
       <input
         matInput
         type="email"
@@ -54,6 +53,18 @@
         Password must be at least 6 characters long
       </mat-error>
 
+    </mat-form-field>
+
+    <!-- Birthdate -->
+    <mat-form-field>
+      <input
+        matInput
+        [matDatepicker]="datepicker"
+        [max]="maxDate"
+        placeholder="Your birthdate..."
+      >
+      <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
+      <mat-datepicker #datepicker></mat-datepicker>
     </mat-form-field>
 
     <!-- Submit -->
