--- a/ngrx-material/fitness-app/src/app/auth/signup/signup.component.scss
+++ b/ngrx-material/fitness-app/src/app/auth/signup/signup.component.scss
@@ -3,6 +3,11 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  > * {
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
+  }
 }
 
 mat-form-field {
